--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
     padding-top: 10px;
     padding-bottom: 15px;
     font-family: "Carrois Gothic SC", sans-serif;
+    background-image: url("../assets/images/marvelbg.jpg");
 }
 
 #topImageL {
@@ -28,7 +29,7 @@ label {
     margin-left: 5px;
     margin-top: 5px;
     margin-bottom: 5px;
-    background-image: url("../assets/images/background.jpg");
+    background-image: url("../assets/images/captaina2.jpg");
 }
 
 #marvelSearch {
@@ -49,5 +50,5 @@ label {
 }
 
 .container {
-    background-image: url("../assets/images/backgrd.jpg");
+    background-image: url("../assets/images/images.jpg");
 }
